--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <form class="form">
+    <input type="text" placeholder="Search images..." class="text-input">
+    <button type="submit" class="btn">Search</button>
+    </form>
+    <ul class="gallery"></ul>
+    <button class="load-more">Load more</button>
+    <span class="loader"></span>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
